--- a/css/main.css
+++ b/css/main.css
@@ -39,13 +39,12 @@ figure {
 }
 
 header{
-    width: 50px;
-    height: 50px;
+
     margin: 0 auto;
 }
 
 header:hover svg#logo {
   fill: #3d85c6;
-  -webkit-filter: drop-shadow(3px 3px 3px #ddd);
-  filter: drop-shadow(3px 3px 3px #ddd);
+  /* webkit-filter: drop-shadow(3px 3px 3px #ddd);
+  filter: drop-shadow(3px 3px 3px #ddd);*/
 }
